--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "expo": "^27.0.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-image-progress": "^1.1.1",
+    "react-native-progress": "^3.5.0",
     "react-navigation": "^2.4.1"
   }
 }
